Added middleware and test endpoint for it
